--- a/style.css
+++ b/style.css
@@ -354,12 +354,10 @@ body {
     flex-direction: column;
   }
 
+  /* Remove vertical centering from main */
   main {
     flex: 1 0 auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: block;
   }
 
   .site-footer {
@@ -370,7 +368,8 @@ body {
   }
 
   .site-header {
-    padding-top: 24px;
+    padding-top: 40px;
+    margin-top: 16px;
     text-align: center;
   }
 
@@ -382,22 +381,20 @@ body {
 
   .site-title {
     font-size: 16px;
-    margin-bottom: 6px;
   }
 
   .chatbox {
-    margin: 20px 0;
-    padding-left: 10px;
-    padding-right: 10px;
+    margin: 15px 0;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 20px; /* Reduced from 75px to 20px */
     width: 100%;
     max-width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    display: block;
   }
 
   .chat-window {
-    height: 240px;
+    height: 400px;
     font-size: 15px;
     padding: 10px;
   }
@@ -409,8 +406,8 @@ body {
   }
 
   .chat-form {
-    padding-left: 6px;
-    padding-right: 6px;
+    padding-left: 10px;
+    padding-right: 10px;
     width: 100%;
     max-width: 100%;
     display: flex;
